Updated and Added documentation

--- a/TimberLogHelp/2_ProjectPrinciples.htm
+++ b/TimberLogHelp/2_ProjectPrinciples.htm
@@ -11,7 +11,7 @@
 <meta name="keywords" content="Logbook, Logs, Data">
 <meta name="description" content="TimberLog Manual">
 </head>
-<body lang="EN-US">
+<body lang="EN-US" link="blue" vlink="purple">
 <div class="WordSection1">
 <h1><a name="node1" id="node1"></a><span style=
 'font-family:"Calibri Light","sans-serif"'>Project
@@ -21,7 +21,8 @@ Principles</span></h1>
 -<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 <span style='font-family:"Calibri Light","sans-serif"'>Simple -
-Plain text. Simple interfaces</span></p>
+Entries are formatted in plain text. Interfaces are simple and easy
+to use</span></p>
 <p class="MsoListParagraphCxSpMiddle" style=
 'margin-top:0in;margin-right:0in; margin-bottom:0in;margin-left:.25in;margin-bottom:.0001pt;text-indent:-.25in; line-height:normal'>
 -<span style=
@@ -34,20 +35,13 @@ audits</span></p>
 -<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 <span style='font-family:"Calibri Light","sans-serif"'>Flexible -
-through the use of templates</span></p>
-<p class="MsoListParagraphCxSpMiddle" style=
-'margin-top:0in;margin-right:0in; margin-bottom:0in;margin-left:.25in;margin-bottom:.0001pt;text-indent:-.25in; line-height:normal'>
--<span style=
-'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-<span style='font-family:"Calibri Light","sans-serif"'>Many methods
-of output (txt, PDF, Word, Print)</span></p>
+Through the use of templates (called Logbook Types)</span></p>
 <p class="MsoListParagraphCxSpLast" style=
 'margin-top:0in;margin-right:0in; margin-bottom:0in;margin-left:.25in;margin-bottom:.0001pt;text-indent:-.25in; line-height:normal'>
 -<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-<span style='font-family:"Calibri Light","sans-serif"'>Portable -
-Installs locally. Only requires .Net and C++
-distributable</span></p>
+<span style='font-family:"Calibri Light","sans-serif"'>Many methods
+of output (Text, PDF, Microsoft Word, Print)</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
