--- a/TimberLogHelp/index.html
+++ b/TimberLogHelp/index.html
@@ -61,6 +61,9 @@ width="100%" height="600" frameborder="0" scrolling="auto" src="">
 <span style=
 'font-family: "Calibri Light","sans-serif"'>TimberLog</span></p>
 </div>
+<p class="MsoNormal">This manual provides information on using,
+extending, and contributing toward the development of TimberLog
+Logbook Software.</p>
 </div>
 </iframe> <!--Table of contents, index and search panel-->
 <div class="ui-layout-west"><!--Tab titles-->
@@ -80,45 +83,58 @@ width="100%" height="600" frameborder="0" scrolling="auto" src="">
 TimberLog</a></li>
 <li><a href="2_ProjectPrinciples.htm#node1">Project
 Principles</a></li>
-<li><a href="3_UseCases.htm#node2">Use Cases</a></li>
-<li><a href="4_GeneralOverview.htm#node3">General Overview</a></li>
-<li><a href="5_UsingLogbooks.htm#node4">Using Logbooks</a>
+<li><a href="3_Features.htm#node2">Features</a>
 <ul>
-<li><a href="6_TheStartScreen.htm#node5">The Start Screen</a></li>
-<li><a href="7_Quickstart.htm#node6">Quickstart</a></li>
-<li><a href="8_CreatingaNewLogbook.htm#node7">Creating a New
+<li><a href="4_Templating.htm#node3">Templating</a></li>
+<li><a href="5_EncryptionandSecurity.htm#node4">Encryption and
+Security</a></li>
+</ul>
+</li>
+<li><a href="6_UseCases.htm#node5">Use Cases</a></li>
+<li><a href="7_UsingLogbooks.htm#node6">Using Logbooks</a>
+<ul>
+<li><a href="8_TheStartScreen.htm#node7">The Start Screen</a></li>
+<li><a href="9_Quickstart.htm#node8">Quickstart</a></li>
+<li><a href="10_CreatingaNewLogbook.htm#node9">Creating a New
 Logbook</a></li>
-<li><a href="9_UsingLogbookAutomationFeatures.htm#node8">Using
+<li><a href="11_UsingLogbookAutomationFeatures.htm#node10">Using
 Logbook Automation Features</a></li>
-<li><a href="10_WorkingwiththeCurrentLogbook.htm#node9">Working
+<li><a href="12_WorkingwiththeCurrentLogbook.htm#node11">Working
 with the Current Logbook</a></li>
-<li><a href="11_SearchingtheLogbook.htm#node10">Searching the
+<li><a href="13_SearchingtheLogbook.htm#node12">Searching the
 Logbook</a></li>
 <li><a href=
-"12_ViewingDetailsandAuditInformation.htm#node11">Viewing Details
+"14_ViewingDetailsandAuditInformation.htm#node13">Viewing Details
 and Audit Information</a></li>
-<li><a href="13_ExportingLogbookData.htm#node12">Exporting Logbook
+<li><a href="15_ExportingLogbookData.htm#node14">Exporting Logbook
 Data</a></li>
 </ul>
 </li>
-<li><a href="14_CreatingLogbookTypeTemplates.htm#node13">Creating
+<li><a href="16_CreatingLogbookTypeTemplates.htm#node15">Creating
 Logbook Type Templates</a>
 <ul>
-<li><a href="14_CreatingLogbookTypeTemplates.htm#node14">Overview
+<li><a href="16_CreatingLogbookTypeTemplates.htm#node16">Overview
 of Logbook Type Templates</a></li>
-<li><a href="16_LogbookTypeBlock.htm#node15">Logbook Type
+<li><a href="18_LogbookTypeBlock.htm#node17">Logbook Type
 Block</a></li>
-<li><a href="17_DescriptionBlock.htm#node16">Description
+<li><a href="19_DescriptionBlock.htm#node18">Description
 Block</a></li>
-<li><a href="18_SettingsBlock.htm#node17">Settings Block</a></li>
-<li><a href="19_DefaultCategoriesBlock.htm#node18">Default
+<li><a href="20_SettingsBlock.htm#node19">Settings Block</a></li>
+<li><a href="21_DefaultCategoriesBlock.htm#node20">Default
 Categories Block</a></li>
-<li><a href="20_DefaultTextBlock.htm#node19">Default Text
+<li><a href="22_DefaultTextBlock.htm#node21">Default Text
 Block</a></li>
-<li><a href="21_OneLineBlock.htm#node20">One Line Block</a></li>
-<li><a href="22_MultiLineBock.htm#node21">Multi Line Bock</a></li>
-<li><a href="23_ExampleTypeTemplate.htm#node22">Example Type
-Template</a></li>
+<li><a href="23_OneLineBlock.htm#node22">One Line Block</a></li>
+<li><a href="24_MultiLineBock.htm#node23">Multi Line Bock</a></li>
+<li><a href="25_ExampleTypeTemplates.htm#node24">Example Type
+Templates</a></li>
+</ul>
+</li>
+<li><a href="26_TimberLogDevelopment.htm#node25">TimberLog
+Development</a>
+<ul>
+<li><a href="26_TimberLogDevelopment.htm#node26">Development
+Environment</a></li>
 </ul>
 </li>
 </ul>
@@ -129,47 +145,53 @@ Template</a></li>
 <div><input type="text" id="searchTopic" name=
 "searchTopic" /></div>
 <select id="topicsList" size="30">
-<option value="8_CreatingaNewLogbook.htm#node7">Creating a New
+<option value="10_CreatingaNewLogbook.htm#node9">Creating a New
 Logbook</option>
-<option value="14_CreatingLogbookTypeTemplates.htm#node13">Creating
+<option value="16_CreatingLogbookTypeTemplates.htm#node15">Creating
 Logbook Type Templates</option>
-<option value="19_DefaultCategoriesBlock.htm#node18">Default
+<option value="21_DefaultCategoriesBlock.htm#node20">Default
 Categories Block</option>
-<option value="20_DefaultTextBlock.htm#node19">Default Text
+<option value="22_DefaultTextBlock.htm#node21">Default Text
 Block</option>
-<option value="17_DescriptionBlock.htm#node16">Description
+<option value="19_DescriptionBlock.htm#node18">Description
 Block</option>
-<option value="23_ExampleTypeTemplate.htm#node22">Example Type
-Template</option>
-<option value="13_ExportingLogbookData.htm#node12">Exporting
+<option value="26_TimberLogDevelopment.htm#node26">Development
+Environment</option>
+<option value="5_EncryptionandSecurity.htm#node4">Encryption and
+Security</option>
+<option value="25_ExampleTypeTemplates.htm#node24">Example Type
+Templates</option>
+<option value="15_ExportingLogbookData.htm#node14">Exporting
 Logbook Data</option>
-<option value="4_GeneralOverview.htm#node3">General
-Overview</option>
-<option value="16_LogbookTypeBlock.htm#node15">Logbook Type
+<option value="3_Features.htm#node2">Features</option>
+<option value="18_LogbookTypeBlock.htm#node17">Logbook Type
 Block</option>
-<option value="22_MultiLineBock.htm#node21">Multi Line
+<option value="24_MultiLineBock.htm#node23">Multi Line
 Bock</option>
-<option value="21_OneLineBlock.htm#node20">One Line Block</option>
-<option value="14_CreatingLogbookTypeTemplates.htm#node14">Overview
+<option value="23_OneLineBlock.htm#node22">One Line Block</option>
+<option value="16_CreatingLogbookTypeTemplates.htm#node16">Overview
 of Logbook Type Templates</option>
 <option value="2_ProjectPrinciples.htm#node1">Project
 Principles</option>
 <option value="1_PurposeofTimberLog.htm#node0">Purpose of
 TimberLog</option>
-<option value="7_Quickstart.htm#node6">Quickstart</option>
-<option value="11_SearchingtheLogbook.htm#node10">Searching the
+<option value="9_Quickstart.htm#node8">Quickstart</option>
+<option value="13_SearchingtheLogbook.htm#node12">Searching the
 Logbook</option>
-<option value="18_SettingsBlock.htm#node17">Settings Block</option>
-<option value="6_TheStartScreen.htm#node5">The Start
+<option value="20_SettingsBlock.htm#node19">Settings Block</option>
+<option value="4_Templating.htm#node3">Templating</option>
+<option value="8_TheStartScreen.htm#node7">The Start
 Screen</option>
+<option value="26_TimberLogDevelopment.htm#node25">TimberLog
+Development</option>
 <option value="start.htm">TimberLog Manual</option>
-<option value="3_UseCases.htm#node2">Use Cases</option>
-<option value="9_UsingLogbookAutomationFeatures.htm#node8">Using
+<option value="6_UseCases.htm#node5">Use Cases</option>
+<option value="11_UsingLogbookAutomationFeatures.htm#node10">Using
 Logbook Automation Features</option>
-<option value="5_UsingLogbooks.htm#node4">Using Logbooks</option>
-<option value="12_ViewingDetailsandAuditInformation.htm#node11">
+<option value="7_UsingLogbooks.htm#node6">Using Logbooks</option>
+<option value="14_ViewingDetailsandAuditInformation.htm#node13">
 Viewing Details and Audit Information</option>
-<option value="10_WorkingwiththeCurrentLogbook.htm#node9">Working
+<option value="12_WorkingwiththeCurrentLogbook.htm#node11">Working
 with the Current Logbook</option>
 </select></div>
 <!--Search tab-->
