Continued Updating WebHelp Documentation

--- a/TimberLogHelp/27_ExampleTypeTemplates.htm
+++ b/TimberLogHelp/27_ExampleTypeTemplates.htm
@@ -13,7 +13,7 @@
 </head>
 <body lang="EN-US" link="blue" vlink="purple">
 <div class="WordSection1">
-<h2><a name="node24" id="node24"></a><span style=
+<h2><a name="node26" id="node26"></a><span style=
 'font-family:"Calibri Light","sans-serif"'>Example Type
 Templates</span></h2>
 <p class="MsoNormal" style=
@@ -49,7 +49,12 @@ minimal example Logbook Type File (Empty.logt):</span></p>
 <span style='font-family:"Courier New"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Courier New"'>&nbsp;</span></p>
+<span style='font-family:"Courier New"'>This is a standard comment.
+It is not placed within any block.</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style='font-family:"Courier New"'>Comments can be helpful if
+a Logbook Type file is edited in the future.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Courier New"'>&nbsp;</span></p>
@@ -80,7 +85,7 @@ logbook types.</span></p>
 'font-family:"Calibri Light","sans-serif"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Calibri Light","sans-serif"'>A more
+<span style='font-family:"Calibri Light","sans-serif"'>A much more
 detailed example (Example.logt):</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
@@ -110,15 +115,12 @@ detailed example (Example.logt):</span></p>
 <span style='font-family:"Courier New"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Courier New"'>&nbsp;</span></p>
-<p class="MsoNormal" style=
-'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Courier New"'>You can add any sort of
-comments or notes that you want</span></p>
+<span style='font-family:"Courier New"'>You can add standard
+comments just about anywhere</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Courier New"'>- as long as it's not
-within a section! -</span></p>
+within one of the defined Blocks! -</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Courier New"'>&nbsp;</span></p>
@@ -126,19 +128,40 @@ within a section! -</span></p>
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Courier New"'>Just keep in mind that
 these comments will not be saved with the logbooks you create. Only
-the content within the sections will be saved along with each
+the content within the defined Blocks will be saved along with each
 logbook. Therefore, any important details that are specific to the
 usage of the logbook type should be included within the Description
-section.</span></p>
+Block.</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style='font-family:"Courier New"'>&nbsp;</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style='font-family:"Courier New"'>&nbsp;</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style=
+'font-family:"Courier New"'>&gt;&gt;&gt;*Comments*&lt;&lt;&lt;</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style='font-family:"Courier New"'>This comment will be saved
+and embedded with the logbook</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style=
+'font-family:"Courier New"'>&gt;&gt;&gt;*Comments*&lt;&lt;&lt;</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style='font-family:"Courier New"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Courier New"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Courier New"'>Notes or comments outside
-of the sections should serve mainly to help document the logbook
-type in order to explain why various decisions were made or how
-another person can extend the logbook type for their
+of the defined Blocks should serve mainly to help document the
+logbook type in order to explain why various decisions were made or
+how another person can extend the logbook type for their
 needs.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
@@ -166,6 +189,32 @@ new logbook types.</span></p>
 <span style='font-family:"Courier New"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style='font-family:"Courier New"'>Here I’ve set values for a
+couple of settings:</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style='font-family:"Courier New"'>&nbsp;</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style=
+'font-family:"Courier New"'>&gt;&gt;&gt;*Settings*&lt;&lt;&lt;</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style=
+'font-family:"Courier New"'>Sort_Categories=False</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style=
+'font-family:"Courier New"'>Embed_TypeFile=True</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style=
+'font-family:"Courier New"'>&gt;&gt;&gt;*Settings*&lt;&lt;&lt;</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style='font-family:"Courier New"'>&nbsp;</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Courier New"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
@@ -187,10 +236,7 @@ when making a new entry.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
-'font-family:"Courier New"'>------------------------------------------------------------------------------------</span></p>
-<p class="MsoNormal" style=
-'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Courier New"'>&nbsp;</span></p>
+'font-family:"Courier New"'>--------------------------------------------------------------------</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
@@ -203,7 +249,7 @@ when making a new entry.</span></p>
 <span style='font-family:"Courier New"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Courier New"'>Here are a few categories
+<span style='font-family:"Courier New"'>Below are a few categories
 for the logbook.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
@@ -213,8 +259,8 @@ will not be used.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Courier New"'>Additionally, since this
-section is optional, you can either leave the line(s) within the
-section blank or delete it altogether.</span></p>
+Block is optional, you can either leave the line(s) within the
+Block blank or delete the Block altogether.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Courier New"'>&nbsp;</span></p>
@@ -291,6 +337,11 @@ over the lazy dog!</span></p>
 <span style='font-family:"Courier New"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style='font-family:"Courier New"'>Remember that the first
+line of Multi_Line Blocks is used at the name or title for that
+block, and is not inserted into the Logbook Entry.</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Courier New"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
@@ -339,12 +390,6 @@ Recognized:</span></p>
 <span style='font-family:"Courier New"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Courier New"'>&nbsp;</span></p>
-<p class="MsoNormal" style=
-'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Courier New"'>&nbsp;</span></p>
-<p class="MsoNormal" style=
-'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
 'font-family:"Courier New"'>&gt;&gt;&gt;*Multi_Line*&lt;&lt;&lt;</span></p>
 <p class="MsoNormal" style=
@@ -356,12 +401,6 @@ Recognized:</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Courier New"'>Progress:</span></p>
-<p class="MsoNormal" style=
-'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Courier New"'>&nbsp;</span></p>
-<p class="MsoNormal" style=
-'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Courier New"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Courier New"'>&nbsp;</span></p>
@@ -393,8 +432,9 @@ Involved:</span></p>
 <span style='font-family:"Courier New"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Courier New"'>You can do some formatting
-as well. Ascii text blocks, tabs, etc are acceptable.</span></p>
+<span style='font-family:"Courier New"'>You can do some basic
+formatting as well. Ascii text blocks, tabs, etc are
+acceptable.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Courier New"'>&nbsp;</span></p>
@@ -488,30 +528,10 @@ Component:</span></p>
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Courier New"'>Again, any additional notes
 or comments that you want to are absolutely acceptable as long as
-they are outside of the sections.</span></p>
+they are outside of the defined Blocks.</span></p>
 </td>
 </tr>
 </table>
-<p class="MsoNormal" style=
-'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style=
-'font-family:"Calibri Light","sans-serif"'>&nbsp;</span></p>
-<p class="MsoNormal" style=
-'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style=
-'font-family:"Calibri Light","sans-serif"'>&nbsp;</span></p>
-<p class="MsoNormal" style=
-'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style=
-'font-family:"Calibri Light","sans-serif"'>&nbsp;</span></p>
-<p class="MsoNormal" style=
-'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style=
-'font-family:"Calibri Light","sans-serif"'>&nbsp;</span></p>
-<p class="MsoNormal" style=
-'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style=
-'font-family:"Calibri Light","sans-serif"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
