--- a/TimberLogHelp/9_Quickstart.htm
+++ b/TimberLogHelp/9_Quickstart.htm
@@ -73,8 +73,9 @@ password into both text boxes.</span></p>
 'font-family:"Calibri Light","sans-serif"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Calibri Light","sans-serif"'>Select a
-file name and location to save your new logbook.</span></p>
+<span style='font-family:"Calibri Light","sans-serif"'>When the
+Save Dialog opens, Choose a file name and location to save your new
+logbook.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
@@ -82,10 +83,11 @@ file name and location to save your new logbook.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Calibri Light","sans-serif"'>When the
-logbook window opens, write the text of the first logbook entry in
+logbook window opens, type the text of the first logbook entry in
 the text area at the bottom of the screen, type your initials in
 the “Name” text box, and click “Add New Entry”. The text you typed
-should now appear in the upper text area.</span></p>
+should now appear in the upper text area, and has been added to the
+Logbook.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
