--- a/TimberLogHelp/index.html
+++ b/TimberLogHelp/index.html
@@ -61,6 +61,7 @@ width="100%" height="600" frameborder="0" scrolling="auto" src="">
 <span style=
 'font-family: "Calibri Light","sans-serif"'>TimberLog</span></p>
 </div>
+<p class="MsoNormal">&nbsp;</p>
 <p class="MsoNormal">This manual provides information on using,
 extending, and contributing toward the development of TimberLog
 Logbook Software.</p>
@@ -85,56 +86,64 @@ TimberLog</a></li>
 Principles</a></li>
 <li><a href="3_Features.htm#node2">Features</a>
 <ul>
-<li><a href="4_Templating.htm#node3">Templating</a></li>
-<li><a href="5_EncryptionandSecurity.htm#node4">Encryption and
-Security</a></li>
+<li><a href="3_Features.htm#node3">Free and Opensource</a></li>
+<li><a href=
+"5_EncryptionSecurityandDataIntegrity.htm#node4">Encryption,
+Security, and Data Integrity</a></li>
+<li><a href="6_Templating.htm#node5">Templating</a></li>
 </ul>
 </li>
-<li><a href="6_UseCases.htm#node5">Use Cases</a></li>
 <li><a href="7_UsingLogbooks.htm#node6">Using Logbooks</a>
 <ul>
 <li><a href="8_TheStartScreen.htm#node7">The Start Screen</a></li>
 <li><a href="9_Quickstart.htm#node8">Quickstart</a></li>
 <li><a href="10_CreatingaNewLogbook.htm#node9">Creating a New
 Logbook</a></li>
-<li><a href="11_UsingLogbookAutomationFeatures.htm#node10">Using
+<li><a href="11_OpeningandExistingLogbook.htm#node10">Opening and
+Existing Logbook</a></li>
+<li><a href="12_UsingLogbookAutomationFeatures.htm#node11">Using
 Logbook Automation Features</a></li>
-<li><a href="12_WorkingwiththeCurrentLogbook.htm#node11">Working
+<li><a href="13_WorkingwiththeCurrentLogbook.htm#node12">Working
 with the Current Logbook</a></li>
-<li><a href="13_SearchingtheLogbook.htm#node12">Searching the
+<li><a href="14_SearchingtheLogbook.htm#node13">Searching the
 Logbook</a></li>
-<li><a href=
-"14_ViewingDetailsandAuditInformation.htm#node13">Viewing Details
-and Audit Information</a></li>
-<li><a href="15_ExportingLogbookData.htm#node14">Exporting Logbook
+<li><a href="15_ViewingLogbookDetails.htm#node14">Viewing Logbook
+Details</a></li>
+<li><a href="16_PerformLogbookIntegrityAudit.htm#node15">Perform
+Logbook Integrity Audit</a></li>
+<li><a href="17_ExportingLogbookData.htm#node16">Exporting Logbook
 Data</a></li>
 </ul>
 </li>
-<li><a href="16_CreatingLogbookTypeTemplates.htm#node15">Creating
-Logbook Type Templates</a>
+<li><a href="18_LogbookTypeTemplates.htm#node17">Logbook Type
+Templates</a>
 <ul>
-<li><a href="16_CreatingLogbookTypeTemplates.htm#node16">Overview
-of Logbook Type Templates</a></li>
-<li><a href="18_LogbookTypeBlock.htm#node17">Logbook Type
+<li><a href="19_LogbookTypeBlock.htm#node18">Logbook Type
 Block</a></li>
-<li><a href="19_DescriptionBlock.htm#node18">Description
+<li><a href="20_DescriptionBlock.htm#node19">Description
 Block</a></li>
-<li><a href="20_SettingsBlock.htm#node19">Settings Block</a></li>
-<li><a href="21_DefaultCategoriesBlock.htm#node20">Default
+<li><a href="21_SettingsBlock.htm#node20">Settings Block</a></li>
+<li><a href="22_DefaultCategoriesBlock.htm#node21">Default
 Categories Block</a></li>
-<li><a href="22_DefaultTextBlock.htm#node21">Default Text
+<li><a href="23_DefaultTextBlock.htm#node22">Default Text
 Block</a></li>
-<li><a href="23_OneLineBlock.htm#node22">One Line Block</a></li>
-<li><a href="24_MultiLineBock.htm#node23">Multi Line Bock</a></li>
-<li><a href="25_ExampleTypeTemplates.htm#node24">Example Type
+<li><a href="24_OneLineBlock.htm#node23">One Line Block</a></li>
+<li><a href="25_MultiLineBock.htm#node24">Multi Line Bock</a></li>
+<li><a href="26_CommentswithinTypeTemplates.htm#node25">Comments
+within Type Templates</a></li>
+<li><a href="27_ExampleTypeTemplates.htm#node26">Example Type
 Templates</a></li>
 </ul>
 </li>
-<li><a href="26_TimberLogDevelopment.htm#node25">TimberLog
+<li><a href="28_TimberLogDevelopment.htm#node27">TimberLog
 Development</a>
 <ul>
-<li><a href="26_TimberLogDevelopment.htm#node26">Development
+<li><a href="28_TimberLogDevelopment.htm#node28">Development
 Environment</a></li>
+<li><a href="30_SourceCodeandBinaries.htm#node29">Source Code and
+Binaries</a></li>
+<li><a href="31_BasicLogbookFileFormatandConcept.htm#node30">Basic
+Logbook File Format and Concept</a></li>
 </ul>
 </li>
 </ul>
@@ -145,53 +154,61 @@ Environment</a></li>
 <div><input type="text" id="searchTopic" name=
 "searchTopic" /></div>
 <select id="topicsList" size="30">
+<option value="31_BasicLogbookFileFormatandConcept.htm#node30">
+Basic Logbook File Format and Concept</option>
+<option value="26_CommentswithinTypeTemplates.htm#node25">Comments
+within Type Templates</option>
 <option value="10_CreatingaNewLogbook.htm#node9">Creating a New
 Logbook</option>
-<option value="16_CreatingLogbookTypeTemplates.htm#node15">Creating
-Logbook Type Templates</option>
-<option value="21_DefaultCategoriesBlock.htm#node20">Default
+<option value="22_DefaultCategoriesBlock.htm#node21">Default
 Categories Block</option>
-<option value="22_DefaultTextBlock.htm#node21">Default Text
+<option value="23_DefaultTextBlock.htm#node22">Default Text
 Block</option>
-<option value="19_DescriptionBlock.htm#node18">Description
+<option value="20_DescriptionBlock.htm#node19">Description
 Block</option>
-<option value="26_TimberLogDevelopment.htm#node26">Development
+<option value="28_TimberLogDevelopment.htm#node28">Development
 Environment</option>
-<option value="5_EncryptionandSecurity.htm#node4">Encryption and
-Security</option>
-<option value="25_ExampleTypeTemplates.htm#node24">Example Type
+<option value="5_EncryptionSecurityandDataIntegrity.htm#node4">
+Encryption, Security, and Data Integrity</option>
+<option value="27_ExampleTypeTemplates.htm#node26">Example Type
 Templates</option>
-<option value="15_ExportingLogbookData.htm#node14">Exporting
+<option value="17_ExportingLogbookData.htm#node16">Exporting
 Logbook Data</option>
 <option value="3_Features.htm#node2">Features</option>
-<option value="18_LogbookTypeBlock.htm#node17">Logbook Type
+<option value="3_Features.htm#node3">Free and Opensource</option>
+<option value="19_LogbookTypeBlock.htm#node18">Logbook Type
 Block</option>
-<option value="24_MultiLineBock.htm#node23">Multi Line
+<option value="18_LogbookTypeTemplates.htm#node17">Logbook Type
+Templates</option>
+<option value="25_MultiLineBock.htm#node24">Multi Line
 Bock</option>
-<option value="23_OneLineBlock.htm#node22">One Line Block</option>
-<option value="16_CreatingLogbookTypeTemplates.htm#node16">Overview
-of Logbook Type Templates</option>
+<option value="24_OneLineBlock.htm#node23">One Line Block</option>
+<option value="11_OpeningandExistingLogbook.htm#node10">Opening and
+Existing Logbook</option>
+<option value="16_PerformLogbookIntegrityAudit.htm#node15">Perform
+Logbook Integrity Audit</option>
 <option value="2_ProjectPrinciples.htm#node1">Project
 Principles</option>
 <option value="1_PurposeofTimberLog.htm#node0">Purpose of
 TimberLog</option>
 <option value="9_Quickstart.htm#node8">Quickstart</option>
-<option value="13_SearchingtheLogbook.htm#node12">Searching the
+<option value="14_SearchingtheLogbook.htm#node13">Searching the
 Logbook</option>
-<option value="20_SettingsBlock.htm#node19">Settings Block</option>
-<option value="4_Templating.htm#node3">Templating</option>
+<option value="21_SettingsBlock.htm#node20">Settings Block</option>
+<option value="30_SourceCodeandBinaries.htm#node29">Source Code and
+Binaries</option>
+<option value="6_Templating.htm#node5">Templating</option>
 <option value="8_TheStartScreen.htm#node7">The Start
 Screen</option>
-<option value="26_TimberLogDevelopment.htm#node25">TimberLog
+<option value="28_TimberLogDevelopment.htm#node27">TimberLog
 Development</option>
 <option value="start.htm">TimberLog Manual</option>
-<option value="6_UseCases.htm#node5">Use Cases</option>
-<option value="11_UsingLogbookAutomationFeatures.htm#node10">Using
+<option value="12_UsingLogbookAutomationFeatures.htm#node11">Using
 Logbook Automation Features</option>
 <option value="7_UsingLogbooks.htm#node6">Using Logbooks</option>
-<option value="14_ViewingDetailsandAuditInformation.htm#node13">
-Viewing Details and Audit Information</option>
-<option value="12_WorkingwiththeCurrentLogbook.htm#node11">Working
+<option value="15_ViewingLogbookDetails.htm#node14">Viewing Logbook
+Details</option>
+<option value="13_WorkingwiththeCurrentLogbook.htm#node12">Working
 with the Current Logbook</option>
 </select></div>
 <!--Search tab-->
